<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/active_room_tab_room"
        android:icon="@drawable/ic_devices"
        android:title="@string/tab_room" />
    <item
        android:id="@+id/active_room_tab_files"
        android:icon="@drawable/ic_share"
        android:title="@string/tab_files" />
    <item
        android:id="@+id/active_room_tab_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/tab_chat" />
    <item
        android:id="@+id/active_room_tab_participants"
        android:icon="@drawable/ic_participants"
        android:title="@string/tab_participants" />
    <item
        android:id="@+id/active_room_tab_history"
        android:icon="@drawable/ic_history"
        android:title="@string/tab_history" />
</menu>
